feat: equip codpiece for gem skills (#3351)
* feat: bank the plan, spin it sideways

* feat: check codpiece in relevant places